Cert-manager/labs/manifests/collected/10-csi-cert-demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: csi-cert-demo
  namespace: sandbox
spec:
  serviceAccountName: default
  containers:
    - name: app
      image: nginx:1.27-alpine
      volumeMounts:
        - name: tls
          mountPath: /tls
          readOnly: true
  volumes:
    - name: tls
      csi:
        driver: csi.cert-manager.io
        readOnly: true
        volumeAttributes:
          csi.cert-manager.io/issuer-kind: ClusterIssuer
          csi.cert-manager.io/issuer-name: local-ca-issuer
          csi.cert-manager.io/dns-names: csi-demo.localhost
          csi.cert-manager.io/common-name: csi-demo.localhost
